--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -7,7 +7,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -90,6 +89,7 @@ deny 107.189.8.238;
 deny 107.189.8.5;
 deny 107.189.8.56;
 deny 107.189.8.65;
+deny 107.23.222.29;
 deny 108.181.27.205;
 deny 108.181.69.243;
 deny 108.61.189.136;
@@ -109,6 +109,7 @@ deny 109.70.100.68;
 deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
+deny 118.163.74.160;
 deny 121.78.28.175;
 deny 123.253.35.32;
 deny 125.212.241.131;
@@ -145,7 +146,6 @@ deny 151.80.148.159;
 deny 152.89.233.169;
 deny 156.146.63.143;
 deny 160.119.249.240;
-deny 161.35.129.51;
 deny 162.247.72.192;
 deny 162.247.72.199;
 deny 162.247.74.200;
@@ -786,6 +786,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -967,7 +968,6 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.239;
 deny 23.94.211.25;
@@ -986,12 +986,12 @@ deny 2.58.95.31;
 deny 2.58.95.35;
 deny 2.58.95.38;
 deny 2600:3c00:e000:4ee::2;
+deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:aabe::1;
@@ -1313,6 +1313,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1593,9 +1594,9 @@ deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
+deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
-deny 3.234.109.219;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 37.1.201.144;
@@ -1707,6 +1708,7 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
