--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -114,6 +114,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -121,12 +122,12 @@ deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::2;
+deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:aabe::1;
@@ -447,6 +448,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
