--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -144,9 +144,9 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
-allow 156.146.63.143;
 allow 160.119.249.240;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -175,6 +175,7 @@ allow 171.25.193.80;
 allow 172.104.214.41;
 allow 172.81.131.156;
 allow 172.81.132.242;
+allow 172.81.132.94;
 allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
@@ -641,7 +642,6 @@ allow 195.80.151.30;
 allow 195.88.74.206;
 allow 198.12.111.102;
 allow 198.144.178.163;
-allow 198.167.206.196;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -962,6 +962,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.133.162;
@@ -986,6 +987,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:aabe::1;
@@ -997,6 +999,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:fef9:100:1100::199;
 allow 2603:3:610a:5050::;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1225,7 +1228,6 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6f8:2020:206:b::196;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
@@ -1607,7 +1609,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 3.91.136.95;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
