--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -144,9 +144,9 @@ set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
-set_real_ip_from 156.146.63.143;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -175,6 +175,7 @@ set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.104.214.41;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.242;
+set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
 set_real_ip_from 173.232.195.146;
@@ -641,7 +642,6 @@ set_real_ip_from 195.80.151.30;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.12.111.102;
 set_real_ip_from 198.144.178.163;
-set_real_ip_from 198.167.206.196;
 set_real_ip_from 198.23.133.132;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
@@ -962,6 +962,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.133.162;
@@ -986,6 +987,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::1;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:11:aabe::1;
@@ -997,6 +999,7 @@ set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:95b7::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:3:610a:5050::;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
@@ -1225,7 +1228,6 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:6f8:2020:206:b::196;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 set_real_ip_from 2a02:898:218::1;
@@ -1607,7 +1609,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 3.91.136.95;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
