--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -525,7 +525,6 @@ allow 185.81.115.120;
 allow 185.82.219.109;
 allow 185.86.148.90;
 allow 188.165.200.97;
-allow 188.166.92.179;
 allow 188.172.229.15;
 allow 188.214.104.21;
 allow 188.68.41.191;
@@ -1224,6 +1223,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
+allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1287,7 +1287,6 @@ allow 2a03:94e0:ffff:185:243:218:0:35;
 allow 2a03:94e0:ffff:185:243:218:0:41;
 allow 2a03:94e0:ffff:185:243:218:0:46;
 allow 2a03:94e0:ffff:185:243:218:0:89;
-allow 2a03:b0c0:2:d0::f1b:2001;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1680,7 +1679,6 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
-allow 46.41.150.103;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
@@ -1702,6 +1700,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.0.213.72;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.26;
@@ -1808,6 +1807,7 @@ allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.211;
+allow 85.204.116.88;
 allow 85.215.76.62;
 allow 86.104.194.13;
 allow 87.118.115.44;
