--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -362,6 +362,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
+deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
@@ -425,7 +426,6 @@ deny 2a03:94e0:ffff:185:243:218:0:35;
 deny 2a03:94e0:ffff:185:243:218:0:41;
 deny 2a03:94e0:ffff:185:243:218:0:46;
 deny 2a03:94e0:ffff:185:243:218:0:89;
-deny 2a03:b0c0:2:d0::f1b:2001;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
 deny 2a03:e600:100::3;
