--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -122,8 +122,7 @@ allow 2402:1f00:8100:400::9;
 allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::1;
-allow 2600:3c03::f03c:91ff:fe24:47be;
+allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
@@ -446,6 +445,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
