--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -142,6 +142,7 @@ deny 149.56.22.133;
 deny 149.56.44.47;
 deny 151.80.148.159;
 deny 152.89.233.169;
+deny 154.16.116.61;
 deny 156.146.63.183;
 deny 160.119.249.240;
 deny 162.247.72.192;
@@ -633,6 +634,7 @@ deny 194.15.112.133;
 deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.163.157.49;
+deny 194.233.174.56;
 deny 194.26.192.64;
 deny 194.26.192.77;
 deny 195.160.220.104;
@@ -987,8 +989,7 @@ deny 2.58.95.38;
 deny 2600:3c00:e000:4ee::1;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::1;
-deny 2600:3c03::f03c:91ff:fe24:47be;
+deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
@@ -1312,6 +1313,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1596,7 +1598,6 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
-deny 34.200.22.139;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 37.1.201.144;
@@ -1656,7 +1657,6 @@ deny 45.66.35.10;
 deny 45.66.35.20;
 deny 45.66.35.21;
 deny 45.66.35.35;
-deny 45.79.144.222;
 deny 45.79.177.21;
 deny 45.79.50.161;
 deny 45.80.158.205;
@@ -1707,6 +1707,7 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
